# mandelbrot

./: .gitignore  CMakeLists.txt  plot.cpp
